--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style type="text/css">
+      body, body * {
+        box-sizing: border-box;
+      }
+    </style>
   </head>
   <body>
     <noscript>
